dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: dev
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: example-app
